ipc/ipdl/test/ipdl/error/trans_WrongDirection2.ipdl
protocol trans_WrongDirection2 {

parent:
    Msg();

state S1:
    send Msg goto S1;

};
